--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"compile-web": "webpack",
 		"watch-web": "webpack --watch",
 		"package-web": "webpack --mode production --devtool hidden-source-map",
+		"package": "vsce package",
 		"lint": "eslint"
 	},
 	"dependencies": {
@@ -56,6 +57,7 @@
 		"@types/vscode": "^1.73.0",
 		"@types/webpack-env": "^1.16.2",
 		"@vscode/test-web": "^0.0.22",
+		"@vscode/vsce": "^3.2.2",
 		"assert": "^2.0.0",
 		"eslint": "^9.13.0",
 		"mocha": "^9.2.0",
